trying a differnt width to help solve ratio problems on smaller screens

--- a/public/src/app/home/_home.scss
+++ b/public/src/app/home/_home.scss
@@ -20,7 +20,7 @@
   }
 
   .calc-container {
-    width: 400px;
+    width: 300px;
     display: flex;
     display:-webkit-flex;
     flex-direction:column;
