--- a/public/src/components/calc/_calc.scss
+++ b/public/src/components/calc/_calc.scss
@@ -13,7 +13,8 @@
   font-family:"Courier New", Courier, monospace;
   height:584px;
   justify-content:flex-start;
-  width:400px;
+  overflow: scroll;
+  width:300x;
   -webkit-align-content:stretch;
   -webkit-align-items:stretch;
   -webkit-flex-direction:column;
